correction of container alignment

--- a/scripts/style/dictionaries.css
+++ b/scripts/style/dictionaries.css
@@ -156,7 +156,7 @@
          
   @media screen and (min-device-width: 1200px) {
   .container {
-    margin-left:2rem;
+    margin-left:2.6rem;
     }
   
   .navbar {min-height:20px;}
